feat: add marked to blog

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,15 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+  /* header 有69px高，会影响跳转 */
+  .prose h1,
+  .prose h2,
+  .prose h3,
+  .prose h4,
+  .prose h5,
+  .prose h6 {
+    @apply scroll-mt-[69px];
+  }
 }
 
 .no-scrollbar::-webkit-scrollbar {
